# MorganOS

./: .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_v0.4.md  CODE_OF_CONDUCT.md  COMPARISON_AUDIT_v0.4.md  CONTRIBUTING.md  Cargo.toml  FINAL_AUDIT_v0.4.md  FINAL_AUDIT_v0.4_REVIEWED.md  FUNCTIONAL_AUDIT_v0.4.md  LICENSE  MAINTENANCE_REPORT.md  README.md  __files.json  build.sh  explorer.html  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
bootloader/: Cargo.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/src/: console.rs  main.rs  panic.rs  pci.rs  test.rs
kernel/src/commands/: cal.rs  cat.rs  clear.rs  date_cmd.rs  echo.rs  env.rs  help.rs  ifconfig.rs  kill_cmd.rs  ls.rs  meminfo.rs  mkdir.rs  mod.rs  net.rs  pcilist.rs  ping.rs  ps.rs  reboot.rs  shutdown.rs  test.rs  uptime.rs  ver.rs  vmstat.rs  whoami.rs
kernel/src/drivers/: ahci.rs  fat32.rs  keyboard.rs  memory.rs  mod.rs  net.rs  process.rs  rtc.rs  rtl8139.rs  tcpip.rs  vga.rs  vm.rs
