[package]
name = "runst_kernel"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
uefi = { version = "0.28", features = ["alloc", "logger"] }
uefi-services = "0.25"
volatile = "0.4"
spin = "0.9"
linked_list_allocator = "0.10"

# === 新增依赖：修复存储、调度、输入、网络 ===
simple-ahci = "0.1.1-preview.1"
fat32 = "0.1.3"
fringe = { version = "1.2", default-features = false }
pc-keyboard = "0.9"
rtl8139-rs = "0.1.2"
bytemuck = { version = "1.0", features = ["derive"] }

[build-dependencies]
chrono = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
